# DetoursAlloc

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
source/src/: DetoursAlloc.cpp  DetoursAlloc.def
